<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.infinote.differentthinking.infinote.views.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="45dp">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/test2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35dp" />

        <EditText
            android:id="@+id/et_email"
            android:background="@drawable/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_example_text"
            android:textColorHint="@color/iron"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/et_password"
            android:background="@drawable/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_example_text"
            android:textColorHint="@color/iron"
            android:textColor="@color/black"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password_text"
            android:textAlignment="textEnd"
            android:textColor="@color/iron" />

        <com.dd.CircularProgressButton
            android:id="@+id/btn_signin"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_textComplete="@string/complete"
            app:cpb_textError="@string/error"
            app:cpb_textIdle="@string/signin_btn_text"
            app:cpb_cornerRadius="48dp"/>

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/no_account_text"
            android:textColor="@color/iron"/>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_text"
            android:textColor="#696969"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
