<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="45dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_form_title_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_example_text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_example_text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password_text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/btn_bg"
            android:text="@string/register_btn_text"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_already_has_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/black"/>

    </LinearLayout>
</ScrollView>
